# minscript

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  HISTORY122  Makefile.palm  MinScript.dsp  MinScript.dsw  MinScriptExe.dsw  README.md  android.mak  android_win.mak  benchmark.ic  build.bat  build_android.bat  build_android.sh  build_android_x86.sh  build_cl.bat  build_for_android.sh  buildmodule.bat  buildmodule.ic  cppclasstest.dsp  cppclasstest.mak  dllexport.h  dozip.bat  dozip.sh  icc3.mak  installapp  linux.mak  mac.mak  makedll.bat  makedll.mak  makefile.gen  makefile.unx  minextdll.cpp  minextdll.def  mingw.mak  minhandle.h  minip.cpp  minip.def  (+46 more)
MinScriptDll/: MinScriptDll.dsp  MinScriptDll.mak
demomodul/: demomodul.dsp  init.cpp
docs/: ip_impl.txt  minscript.html  minscript_doku.html  minscript_home.html
obsolete/: MinScript5.dsp  MinScriptExe.dsp  build_android_x86.bat  installappdll
specs/: auto_test.ic  bug10.ic  bug11.ic  bug12.ic  bug13.ic  bug14.ic  bug15.ic  bug16.ic  bug6.ic  bug7.ic  bug8.ic  bug9.ic  sample1.ic  stl_list.ic  test_arrays.ic  test_classes.ic.txt  test_dll.ic  test_expressions.ic  test_extensions.ic  test_functions.ic  test_functions.ic.txt  test_include.ic  test_include2.ic  test_list.ic  test_makedll.ic  test_preprocessor.ic  test_speed.ic  test_statements.ic  test_variables.ic
test/: addr.ic  bug1.ic  bug2.ic  bug3.ic  bug4.ic  class.ic  class2.ic  class3.ic  class4.ic  cppclasstest.cpp  cppclasstest.h  cppclasstest.ic  cppclasstest_stub.cpp  div.ic  div2.ic  div3.ic  gulp.ic  gulp2.ic  ictypes.ic  inc.ic  iptest.ic  (+23 more)
(+4 files in other folders)
